few updates